[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Gym/polack_paddan.gd" type="Script" id=1]
[ext_resource path="res://Pics/Figurer/frog_coach.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Karakt√§rer/pratbubbla.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 221, 465 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 221, 0, 221, 465 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 442, 0, 221, 465 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 663, 0, 221, 465 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=79]
radius = 150.0
height = 188.0

[node name="Polack-paddan" type="StaticBody2D"]
position = Vector2( 1345, 514 )

[node name="Polackpaddan" type="AnimatedSprite" parent="."]
position = Vector2( 1, 167 )
frames = SubResource( 53 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Polackpaddan"]
wait_time = 6.0

[node name="Timer2" type="Timer" parent="Polackpaddan"]
wait_time = 1.25

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -19, 189 )
polygon = PoolVector2Array( -55, 65, 52, 64, 68, 47, 52, 28, 2, 24, -52, 28, -69, 48 )

[node name="Polack_padda" type="Area2D" parent="."]
position = Vector2( -1345, -514 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Polack_padda"]
position = Vector2( 1329, 621 )
shape = SubResource( 79 )

[node name="Pratbubbla" parent="." instance=ExtResource( 3 )]
position = Vector2( -80, -42 )
frame = 3

[connection signal="timeout" from="Polackpaddan/Timer" to="Polackpaddan" method="_on_Timer_timeout"]
[connection signal="timeout" from="Polackpaddan/Timer2" to="Polackpaddan" method="_on_Timer2_timeout"]
